--- a/Desafio_5_Trilhas.ipynb
+++ b/Desafio_5_Trilhas.ipynb
@@ -2986,7 +2986,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Vendo todos os tipos de dados da tabela"
+        "Vizualizando todos os tipos de dados da tabela"
       ],
       "metadata": {
         "id": "jQdzVqH7Umxn"
